made correction and renamed folder from main.html to index.html and updated the link across the website

--- a/HTML-CATEGORIES/accessories.html
+++ b/HTML-CATEGORIES/accessories.html
@@ -23,7 +23,7 @@
 <body>
     <header class="headerGroup">
         <div class="pageLogoBox">
-            <a href="/main.html"><img class="pageLogo" src="/images/LOGO&BACKGROUND/official logo TRANSPARTENT BG - CROPPED.png" alt="Home Kitchen Studio Logo"></a>
+            <a href="/index.html"><img class="pageLogo" src="/images/LOGO&BACKGROUND/official logo TRANSPARTENT BG - CROPPED.png" alt="Home Kitchen Studio Logo"></a>
         </div>
         <div class="inputBarHeader">
             <input type="text" placeholder="Search...">
