--- a/HTML-VIEW MORE pages/knife-paring-p2-viewmore.html
+++ b/HTML-VIEW MORE pages/knife-paring-p2-viewmore.html
@@ -22,7 +22,7 @@
 <body>
     <header class="headerGroup">
         <div class="pageLogoBox">
-            <a href="/main.html"><img class="pageLogo" src="../images/LOGO&BACKGROUND/official logo TRANSPARTENT BG - CROPPED.png" alt="Home Kitchen Studio Logo"></a>
+            <a href="/index.html"><img class="pageLogo" src="../images/LOGO&BACKGROUND/official logo TRANSPARTENT BG - CROPPED.png" alt="Home Kitchen Studio Logo"></a>
         </div>
         <div class="inputBarHeader">
             <input type="text" placeholder="Search...">
@@ -56,7 +56,7 @@
 
 <div>
     <ul>
-        <li><a href="/main.html">HOME</a></li>
+        <li><a href="/index.html">HOME</a></li>
         <li><a href="/HTML-CATEGORIES/knives.html">KNIVES</a></li>
         <li><a href="knife-paring-p2-viewmore.html">PARING KNIFE</a></li>
     </ul>
@@ -145,10 +145,10 @@
 
 <div>
     <ul>
-        <li><a href="/main.html">Featured Products</a></li>
-        <li><a href="/main.html">Best Sellers</a></li>
-        <li><a href="/main.html">Limited Offers</a></li>
-        <li><a href="/main.html">Bundle Deals</a></li>
+        <li><a href="/index.html">Featured Products</a></li>
+        <li><a href="/index.html">Best Sellers</a></li>
+        <li><a href="/index.html">Limited Offers</a></li>
+        <li><a href="/index.html">Bundle Deals</a></li>
     </ul>
 </div>
 
