--- a/HTML-CATEGORIES/storage.html
+++ b/HTML-CATEGORIES/storage.html
@@ -23,7 +23,7 @@
 <body>
     <header class="headerGroup">
         <div class="pageLogoBox">
-            <a href="/main.html"><img class="pageLogo" src="/images/LOGO&BACKGROUND/official logo TRANSPARTENT BG - CROPPED.png" alt="Home Kitchen Studio Logo"></a>
+            <a href="/index.html"><img class="pageLogo" src="/images/LOGO&BACKGROUND/official logo TRANSPARTENT BG - CROPPED.png" alt="Home Kitchen Studio Logo"></a>
         </div>
         <div class="inputBarHeader">
             <input type="text" placeholder="Search...">
