Added JS functions to SignIn and sign up page, added JS for show and hide password, added HTML form for sign in and sign up

--- a/HTML-CATEGORIES/glasswares.html
+++ b/HTML-CATEGORIES/glasswares.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../CSS FOLDER/categories.css">
     <link rel="stylesheet" href="../CSS FOLDER/mainPage.css">
     <link rel="stylesheet" href="../CSS FOLDER/footermobile.css">
+    <link rel="stylesheet" href="../CSS FOLDER/backtotop.css">
 
     <link rel="icon" type="image/png" href="../images/LOGO&BACKGROUND/official logo TRANSPARTENT BG - CROPPED.png">
 
@@ -495,5 +496,7 @@
 <div class="backtotop" id="backtotop">
     <p>▲ Back To Top</p>
 </div>
+
+<script src="/JS FOLDER/backtotop.js"></script>
 </body>
 </html>
